Integrate JPAM, script support for Java library path